Shira/force-app/main/default/objects/Requests__c/fields/ContactRole__c.field-meta.xml
<CustomField>
    <fullName>ContactRole__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>תפקיד המבקש</label>
    <referenceTo>ContactRoles__c</referenceTo>
    <relationshipLabel>Requests</relationshipLabel>
    <relationshipName>Requests</relationshipName>
    <type>Lookup</type>
</CustomField>