Shira/force-app/main/default/objects/Requests__c/fields/EstimatedWorkingHours__c.field-meta.xml
<CustomField>
    <fullName>EstimatedWorkingHours__c</fullName>
    <label>הערכת ש&quot;ע בפרויקט</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>