Shira/force-app/main/default/objects/Requests__c/fields/Field1__c.field-meta.xml
<CustomField>
    <fullName>Field1__c</fullName>
    <label>מהות הבקשה</label>
    <length>100</length>
    <type>Text</type>
</CustomField>