Shira/force-app/main/default/objects/Requests__c/fields/ModelPro__c.field-meta.xml
<CustomField>
    <fullName>ModelPro__c</fullName>
    <label>דגם מטוס</label>
    <length>8</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>