Shira/force-app/main/default/objects/Requests__c/fields/ProjectEstimatedStart__c.field-meta.xml
<CustomField>
    <fullName>ProjectEstimatedStart__c</fullName>
    <label>תאריך משוער להתחלת פרויקט</label>
    <type>Date</type>
</CustomField>