Shira/force-app/main/default/objects/Requests__c/fields/ProRequireTravels__c.field-meta.xml
<CustomField>
    <fullName>ProRequireTravels__c</fullName>
    <defaultValue>false</defaultValue>
    <label>האם הפרויקט ידרוש נסיעות של אנשי רת&quot;א?</label>
    <type>Checkbox</type>
</CustomField>