Shira/force-app/main/default/objects/Requests__c/fields/reference1__c.field-meta.xml
<CustomField>
    <fullName>reference1__c</fullName>
    <label>אסמכתא 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>