Shira/force-app/main/default/objects/Requests__c/fields/reference2__c.field-meta.xml
<CustomField>
    <fullName>reference2__c</fullName>
    <label>אסמכתא 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>