Shira/force-app/main/default/objects/Requests__c/fields/RequestCancelationReason__c.field-meta.xml
<CustomField>
    <fullName>RequestCancelationReason__c</fullName>
    <label>סיבת ביטול בקשה</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>לא רלוונטי</fullName>
            </value>
            <value>
                <fullName>בוטל ע&quot;י המבקש</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>