Shira/force-app/main/default/objects/Requests__c/fields/RequestCompany__c.field-meta.xml
<CustomField>
    <fullName>RequestCompany__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>חברה מבקשת</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Requests</relationshipLabel>
    <relationshipName>Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>