Shira/force-app/main/default/objects/Requests__c/fields/RequestCreatedBy__c.field-meta.xml
<CustomField>
    <fullName>RequestCreatedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>שם המבקש</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Requests</relationshipName>
    <type>Lookup</type>
</CustomField>