Shira/force-app/main/default/objects/Requests__c/fields/RequestDM__c.field-meta.xml
<CustomField>
    <fullName>RequestDM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>מנהל מחלקה</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Requests (מנהל מחלקה)</relationshipLabel>
    <relationshipName>RequestDM</relationshipName>
    <type>Lookup</type>
</CustomField>