Shira/force-app/main/default/objects/Requests__c/fields/RequestEndReason__c.field-meta.xml
<CustomField>
    <fullName>RequestEndReason__c</fullName>
    <label>סיבת סיום טיפול</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>נסגרה בהצלחה</fullName>
            </value>
            <value>
                <fullName>לקוח לא כשיר</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>