Shira/force-app/main/default/objects/Requests__c/fields/RequestFeePayment__c.field-meta.xml
<CustomField>
    <fullName>RequestFeePayment__c</fullName>
    <label>סכום אגרה לתשלום</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>