Shira/force-app/main/default/objects/Requests__c/fields/RequestProject__c.field-meta.xml
<CustomField>
    <fullName>RequestProject__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>פרויקט</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Requests</relationshipLabel>
    <relationshipName>Requests</relationshipName>
    <type>Lookup</type>
</CustomField>