Shira/force-app/main/default/objects/Requests__c/fields/RequestService__c.field-meta.xml
<CustomField>
    <fullName>RequestService__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>סוג שירות</label>
    <referenceTo>ServiceTypes__c</referenceTo>
    <relationshipLabel>Requests</relationshipLabel>
    <relationshipName>Requests</relationshipName>
    <type>Lookup</type>
</CustomField>