Shira/force-app/main/default/objects/Requests__c/fields/RequestServiceType__c.field-meta.xml
<CustomField>
    <fullName>RequestServiceType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>פירוט השירות</label>
    <referenceTo>ServiceTypesDetails__c</referenceTo>
    <relationshipLabel>Requests</relationshipLabel>
    <relationshipName>Requests</relationshipName>
    <type>Lookup</type>
</CustomField>