Shira/force-app/main/default/objects/Requests__c/fields/RequestSigner__c.field-meta.xml
<CustomField>
    <fullName>RequestSigner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>מורשה החתימה</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Requests (מורשה החתימה)</relationshipLabel>
    <relationshipName>RequestSigner</relationshipName>
    <type>Lookup</type>
</CustomField>