Shira/force-app/main/default/objects/Requests__c/fields/RequestSignerRole__c.field-meta.xml
<CustomField>
    <fullName>RequestSignerRole__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>תפקיד מורשה חתימה</label>
    <referenceTo>ContactRoles__c</referenceTo>
    <relationshipLabel>Requests (תפקיד מורשה חתימה)</relationshipLabel>
    <relationshipName>RequestSignerRole</relationshipName>
    <type>Lookup</type>
</CustomField>