Shira/force-app/main/default/objects/Requests__c/fields/RequestStatus__c.field-meta.xml
<CustomField>
    <fullName>RequestStatus__c</fullName>
    <label>סטטוס בקשה</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>חדש</fullName>
            </value>
            <value>
                <fullName>בטיפול</fullName>
            </value>
            <value>
                <fullName>אישור מנהל מחלקה</fullName>
            </value>
            <value>
                <fullName>נדרשות השלמות</fullName>
            </value>
            <value>
                <fullName>אישור התחייבות</fullName>
            </value>
            <value>
                <fullName>ממתין לתשלום אגרה</fullName>
            </value>
            <value>
                <fullName>סיום טיפול</fullName>
            </value>
            <value>
                <fullName>מבוטל</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>