Shira/force-app/main/default/objects/Requests__c/fields/RequestType__c.field-meta.xml
<CustomField>
    <fullName>RequestType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>סוג בקשה</label>
    <referenceTo>RequestsTypes__c</referenceTo>
    <relationshipLabel>Requests</relationshipLabel>
    <relationshipName>Requests</relationshipName>
    <type>Lookup</type>
</CustomField>